--- a/ak_course_work/part_1/pom.xml
+++ b/ak_course_work/part_1/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>ak_course_work</artifactId>
+    <artifactId>part_1</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
